spacing fix again

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,15 +5,12 @@
 		justify-content: space-between;
 	}
 	.customNav{
-
-	.customNav {
 		align-self: center;
 		margin: 0 0.8em 0 0;
 		padding-left: 0px;
 
 	}
 }
-
 body {
 	background-image: url(../image/background2.jpg);
 	padding: 0;
@@ -33,14 +30,12 @@ body {
 	background-color: black;
 	border-radius: 25px;
 }
-
 .content{
 	background-color: black;
 	padding: 150px;
 	border-radius: 25px;
 	border: 2px solid white;
 }
-
 .head-container{
 	display: flex;
 	flex-direction: column;
@@ -59,7 +54,6 @@ body {
 .card-body{
 	background-color: rgba(255, 255, 255, 0.8);
 }
-
 #playGame{
 	position: relative;
 	top: 43px;
@@ -73,19 +67,16 @@ body {
 	height: 100%;
 	border-radius: 25px;
 }
-
 .slideShow{
 	width: 100%;
 	height: 100%;
 }
-
 .containerheader{
 	background-color: black;
 }
+#logo{
 
-#logo{;
 }
-
 .customNav ul, li{
 	padding: 0 1.4em 0 0;
 	font-size: 0.9em;
@@ -117,7 +108,6 @@ body {
 	border-bottom: 2px solid white;
 	font-weight: 300;
 }
-
 #redText{
 	color: red;
 }
@@ -133,7 +123,6 @@ body {
 #whiteText{
 	color: white;
 }
-
 #playGame:hover{
 	transform: scale(1.5);
 }
@@ -141,44 +130,39 @@ body {
 	background-color: black;
 }
 .container {
-   width: 100%;
+	width: 100%;
 }
-
 .break {
-  flex-basis: 100%;
-  height: 0;
-  top: 50px;
+	flex-basis: 100%;
+	height: 0;
+	top: 50px;
 }
-
 .flex-item-1 {
-  padding: 5px;
-  width: 200px;
-  height: 350px;
-  text-align: center;	
-  flex-grow: 1;
-  border: 2px solid white;
-  border-radius: 25px;
-  z-index: -1;
-  position: relative;	
-  margin: 20px;
-  background-color: black;
+	padding: 5px;
+	width: 200px;
+	height: 350px;
+	text-align: center;	
+	flex-grow: 1;
+	border: 2px solid white;
+	border-radius: 25px;
+	z-index: -1;
+	position: relative;	
+	margin: 20px;
+	background-color: black;
 }
-
 .flex-item-3 {
-  padding: 5px;
-  width: 200px;
-  height: 350px;
-  text-align: center;	
-  flex-grow: 1;
-  border: 2px solid white;
-  border-radius: 25px;
-  z-index: -1;
-  background-image: url(../image/cards.png);
-  position: relative;	
+	padding: 5px;
+	width: 200px;
+	height: 350px;
+	text-align: center;	
+	flex-grow: 1;
+	border: 2px solid white;
+	border-radius: 25px;
+	z-index: -1;
+	background-image: url(../image/cards.png);
+	position: relative;	
     margin: 20px;
-
 }
-
 .flex-layer{
 	background-color: rgba(248, 247, 217, 0.7);
 	position: absolute;
@@ -187,7 +171,6 @@ body {
 	width: 100%
 	height: 100%;
 }
-
 .flex-item-2{
   padding: 5px;
   width: 200px;
@@ -205,23 +188,21 @@ body {
     font-family: "Arial", sans-serif;
     white-space: pre-line;
 }
-
 .flex-container{
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
 	background-image: url(../image/background2.jpg); 
 	opacity: 0.99;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	justify-content: space-around;
 }
